data/Java/08-bad-invocation/3/[M]Error.txt
*https://www.tutorialspoint.com/java/java_methods.htm
[E]This_Example.java:41: error: cannot find symbol
      int ret = obj1.print;
                    ^